--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="wrapper">
       <div class="header-box header_main">
         <div class="logoWrapper logo_main">
-          <a href="./main_page.html">
+          <a href="./index.html">
           </a>
         </div>
 
@@ -229,7 +229,7 @@
       <div class="project_name footer__block">
         <div class="footer__title">
           <div class="logoWrapper logo_main">
-            <a href="./main_page.html">
+            <a href="./index.html">
             </a>
           </div>
         </div>
