--- a/LegendSouth.html
+++ b/LegendSouth.html
@@ -37,7 +37,7 @@
     <div class="wrapper">
       <div class="header-box header_main">
         <div class="logoWrapper logo_main">
-          <a href="./main_page.html">
+          <a href="./index.html">
           </a>
         </div>
 
@@ -102,7 +102,7 @@
       <div class="project_name footer__block">
         <div class="footer__title">
           <div class="logoWrapper logo_main">
-            <a href="./main_page.html">
+            <a href="./index.html">
             </a>
           </div>
         </div>
@@ -118,9 +118,9 @@
         <h3 class="footer__title">навигация</h3>
         <div class="footer__nav">
           <a href="tour_page.html" class="footer__nav_link">Туры</a>
-          <a href="main_page.html#aboutUs" class="footer__nav_link">О нас</a>
-          <a href="main_page.html#galery" class="footer__nav_link">Галерея</a>
-          <a href="main_page.html#reviews" class="footer__nav_link">Отзывы</a>
+          <a href="index.html#aboutUs" class="footer__nav_link">О нас</a>
+          <a href="index.html#galery" class="footer__nav_link">Галерея</a>
+          <a href="index.html#reviews" class="footer__nav_link">Отзывы</a>
         </div>
       </div>
 
