--- a/tour_page.html
+++ b/tour_page.html
@@ -37,7 +37,7 @@
       <div class="header-box header_main">
         <div class="logoWrapper logo_main">
           <div class="logoWrapper logo_main">
-            <a href="./main_page.html">
+            <a href="./index.html">
             </a>
           </div>
           </a>
@@ -50,9 +50,9 @@
 
           <nav class="menu">
             <a href="tour_page.html" class="nav_item nav_link">Туры</a>
-            <a href="main_page.html#aboutUs" class="nav_item nav_link">О нас</a>
-            <a href="main_page.html#galery" class="nav_item nav_link">Галерея</a>
-            <a href="main_page.html#reviews" class="nav_item nav_link">Отзывы</a>
+            <a href="index.html#aboutUs" class="nav_item nav_link">О нас</a>
+            <a href="index.html#galery" class="nav_item nav_link">Галерея</a>
+            <a href="index.html#reviews" class="nav_item nav_link">Отзывы</a>
         </div>
         </nav>
       </div>
@@ -277,7 +277,7 @@
       <div class="project_name footer__block">
         <div class="footer__title">
           <div class="logoWrapper logo_main">
-            <a href="./main_page.html">
+            <a href="./index.html">
             </a>
           </div>
         </div>
@@ -293,9 +293,9 @@
         <h3 class="footer__title">навигация</h3>
         <div class="footer__nav">
           <a href="tour_page.html" class="footer__nav_link">Туры</a>
-          <a href="main_page.html#aboutUs" class="footer__nav_link">О нас</a>
-          <a href="main_page.html#galery" class="footer__nav_link">Галерея</a>
-          <a href="main_page.html#reviews" class="footer__nav_link">Отзывы</a>
+          <a href="index.html#aboutUs" class="footer__nav_link">О нас</a>
+          <a href="index.html#galery" class="footer__nav_link">Галерея</a>
+          <a href="index.html#reviews" class="footer__nav_link">Отзывы</a>
         </div>
       </div>
 
