--- a/BigTravelTour.html
+++ b/BigTravelTour.html
@@ -18,15 +18,15 @@
   <meta property="og:url" content="http://myautoguide.ru" />
 
   <!-- CSS -->
-  <link rel="stylesheet" href="../static/css/tour/tour-details.css">
+  <link rel="stylesheet" href="css/tour/tour-details.css">
   <!-- FONTS -->
-  <link rel="stylesheet" href="../static/fonts/Ubuntu/Ubuntu-Light.ttf" />
-  <link rel="stylesheet" href="../static/css/base/base.css" />
-  <link rel="stylesheet" href="../static/css/tour/tour.css" />
+  <link rel="stylesheet" href="fonts/Ubuntu/Ubuntu-Light.ttf" />
+  <link rel="stylesheet" href="css/base/base.css" />
+  <link rel="stylesheet" href="css/tour/tour.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
   <!-- ФАВИКОН -->
-  <link rel="icon" type="image/x-icon" href="../static/img/favicon_light.ico" id="faviconTag">
-  <link rel="icon" type="image/x-icon" href="../static/img/favicon_dark.ico" id="faviconTag">
+  <link rel="icon" type="image/x-icon" href="img/favicon_light.ico" id="faviconTag">
+  <link rel="icon" type="image/x-icon" href="img/favicon_dark.ico" id="faviconTag">
 
   <title>Главная страница</title>
 </head>
@@ -61,7 +61,7 @@
   <section class="tour-detail">
     <div class="tour-detail__title-box">
       <div class="tour-detail__main-image">
-        <img src="../static/img/tours/tour_1_2.jpg" alt="">
+        <img src="img/tours/tour_1_2.jpg" alt="">
       </div>
       <div class="quick-desc">
         <div class="quick-desc__title">Дагестан: Большое путешествие</div>
@@ -128,13 +128,13 @@
         <h3 class="footer__title">контакты</h3>
         <div class="footer__contacts">
           <div class="footer__contact__item">
-            <img src="../static/img/main-icon.svg" alt="" />
+            <img src="img/main-icon.svg" alt="" />
             <a href="mailto:example@mail.ru"
               style="text-decoration: none; color: black;"><span>example@mail.ru</span></a>
           </div>
 
           <div class="footer__contact__item">
-            <img src="../static/img/whatsapp-icon.svg" alt="" />
+            <img src="img/whatsapp-icon.svg" alt="" />
             <a href="https://api.whatsapp.com/send?phone=" style="text-decoration: none; color: black;"><span>Whatsapp</span></a>
           </div>
         </div>
@@ -147,9 +147,9 @@
   <div class="btn-up btn-up_hide"></div>
   <!-- </div> -->
 
-  <script src="../static/js/main.js"></script>
-  <script type="module" src="../static/js/base.js"></script>
-  <!-- <script type="module" src="../static/js/lazyLoading.js"></script> -->
+  <script src="js/main.js"></script>
+  <script type="module" src="js/base.js"></script>
+  <!-- <script type="module" src="js/lazyLoading.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
   <script>
     const faviconTag = document.getElementById("faviconTag");
@@ -164,7 +164,7 @@
 
     setInterval(changeFavicon, 1000)
   </script>
-  <script src="../static/js/animations.js"></script>
+  <script src="js/animations.js"></script>
 </body>
 
 </html>
