--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
   <meta property="og:url" content="http://myautoguide.ru" />
 
   <!-- CSS -->
-  <link rel="stylesheet" href="../static/css/main_style.css" />
+  <link rel="stylesheet" href="css/main_style.css" />
   <!-- FONTS -->
-  <link rel="stylesheet" href="../static/fonts/Ubuntu/Ubuntu-Light.ttf" />
-  <link rel="stylesheet" href="../static/css/base/base.css" />
-  <link rel="stylesheet" href="../static/css/tour/tour.css" />
+  <link rel="stylesheet" href="fonts/Ubuntu/Ubuntu-Light.ttf" />
+  <link rel="stylesheet" href="css/base/base.css" />
+  <link rel="stylesheet" href="css/tour/tour.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
   <!-- ФАВИКОН -->
-  <link rel="icon" type="image/x-icon" href="../static/img/favicon_light.ico" id="faviconTag">
-  <link rel="icon" type="image/x-icon" href="../static/img/favicon_dark.ico" id="faviconTag">
+  <link rel="icon" type="image/x-icon" href="img/favicon_light.ico" id="faviconTag">
+  <link rel="icon" type="image/x-icon" href="img/favicon_dark.ico" id="faviconTag">
 
   <title>Главная страница</title>
 </head>
@@ -89,7 +89,7 @@
         <div class="tourItem">
           <div class="tourItemImg">
             <a href="./Hunzah.html">
-              <img src="../static/img/tours/tour_6_2.jpg" alt="" />
+              <img src="img/tours/tour_6_2.jpg" alt="" />
             </a>
           </div>
           <div class="tourItemText">
@@ -101,7 +101,7 @@
         <div class="tourItem">
           <div class="tourItemImg">
             <a href="./BigTravelTour.html">
-              <img src="../static/img/tours/tour_1_1.jpg" alt="" />
+              <img src="img/tours/tour_1_1.jpg" alt="" />
             </a>
           </div>
           <div class="tourItemText">
@@ -113,7 +113,7 @@
         <div class="tourItem">
           <div class="tourItemImg">
             <a href="./AncestorsTour.html">
-              <img src="../static/img/tours/tour_2_3.jpg" alt="" />
+              <img src="img/tours/tour_2_3.jpg" alt="" />
             </a>
           </div>
           <div class="tourItemText">
@@ -125,7 +125,7 @@
         <div class="tourItem">
           <div class="tourItemImg">
             <a href="./LegendSouth.html">
-              <img src="../static/img/tours/tour_3_1.jpg" alt="" />
+              <img src="img/tours/tour_3_1.jpg" alt="" />
             </a>
           </div>
           <div class="tourItemText">
@@ -160,9 +160,9 @@
       <h2 class="galeryTitle">Галерея</h2>
 
       <swiper-container class="mySwiper" navigation="true">
-        <swiper-slide><img src="../static/img/main/swiper_img_1.png" alt="" /></swiper-slide>
-        <swiper-slide><img src="../static/img/main/swiper_img_2.jpg" alt="" /></swiper-slide>
-        <swiper-slide><img src="../static/img/main/swiper_img_3.jpg" alt="" /></swiper-slide>
+        <swiper-slide><img src="img/main/swiper_img_1.png" alt="" /></swiper-slide>
+        <swiper-slide><img src="img/main/swiper_img_2.jpg" alt="" /></swiper-slide>
+        <swiper-slide><img src="img/main/swiper_img_3.jpg" alt="" /></swiper-slide>
       </swiper-container>
       <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-element-bundle.min.js"></script>
     </section>
@@ -176,7 +176,7 @@
     <section class="dignity animated">
       <div class="dignityCard">
         <div class="dignityCardIcon">
-          <img src="../static/img/about-us-icons/map-icon.svg" alt="" />
+          <img src="img/about-us-icons/map-icon.svg" alt="" />
         </div>
         <b class="dignityCardTitle">Увлекательные туры</b>
         <p class="dignityCardText">
@@ -185,14 +185,14 @@
       </div>
       <div class="dignityCard">
         <div class="dignityCardIcon">
-          <img src="../static/img/about-us-icons/auto-icon.svg" alt="" />
+          <img src="img/about-us-icons/auto-icon.svg" alt="" />
         </div>
         <b class="dignityCardTitle">Доступный транспорт</b>
         <p class="dignityCardText">Разнообразность услуг авто</p>
       </div>
       <div class="dignityCard">
         <div class="dignityCardIcon">
-          <img src="../static/img/about-us-icons/menu-icon.svg" alt="" />
+          <img src="img/about-us-icons/menu-icon.svg" alt="" />
         </div>
         <b class="dignityCardTitle">Национальное меню</b>
         <p class="dignityCardText">
@@ -201,7 +201,7 @@
       </div>
       <div class="dignityCard">
         <div class="dignityCardIcon">
-          <img src="../static/img/about-us-icons/hotels-icon.svg" alt="" />
+          <img src="img/about-us-icons/hotels-icon.svg" alt="" />
         </div>
         <b class="dignityCardTitle">Уютные отели</b>
         <p class="dignityCardText">
@@ -255,13 +255,13 @@
         <h3 class="footer__title">контакты</h3>
         <div class="footer__contacts">
           <div class="footer__contact__item">
-            <img src="../static/img/main-icon.svg" alt="" />
+            <img src="img/main-icon.svg" alt="" />
             <a href="mailto:example@mail.ru"
               style="text-decoration: none; color: black;"><span>example@mail.ru</span></a>
           </div>
 
           <div class="footer__contact__item">
-            <img src="../static/img/whatsapp-icon.svg" alt="" />
+            <img src="img/whatsapp-icon.svg" alt="" />
             <a href="https://api.whatsapp.com/send?phone=" style="text-decoration: none; color: black;"><span>Whatsapp</span></a>
           </div>
         </div>
@@ -274,9 +274,9 @@
   <div class="btn-up btn-up_hide"></div>
   <!-- </div> -->
 
-  <script src="../static/js/main.js"></script>
-  <script type="module" src="../static/js/base.js"></script>
-  <script type="module" src="../static/js/lazyLoading.js"></script>
+  <script src="js/main.js"></script>
+  <script type="module" src="js/base.js"></script>
+  <script type="module" src="js/lazyLoading.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
   <script>
     const faviconTag = document.getElementById("faviconTag");
@@ -291,7 +291,7 @@
 
     setInterval(changeFavicon, 1000)
   </script>
-  <script src="../static/js/animations.js"></script>
+  <script src="js/animations.js"></script>
 </body>
 
 </html>
