--- a/tour_page.html
+++ b/tour_page.html
@@ -18,14 +18,14 @@
   <meta property="og:url" content="http://myautoguide.ru" />
 
   <!-- CSS -->
-  <link rel="stylesheet" href="../static/css/tour/tour.css" />
+  <link rel="stylesheet" href="css/tour/tour.css" />
   <!-- FONTS -->
-  <link rel="stylesheet" href="../static/fonts/Ubuntu/Ubuntu-Light.ttf" />
-  <link rel="stylesheet" href="../static/css/base/base.css" />
+  <link rel="stylesheet" href="fonts/Ubuntu/Ubuntu-Light.ttf" />
+  <link rel="stylesheet" href="css/base/base.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
   <!-- ФАВИКОН -->
-  <link rel="icon" type="image/x-icon" href="../static/img/favicon_light.ico" id="faviconTag">
-  <link rel="icon" type="image/x-icon" href="../static/img/favicon_dark.ico" id="faviconTag">
+  <link rel="icon" type="image/x-icon" href="img/favicon_light.ico" id="faviconTag">
+  <link rel="icon" type="image/x-icon" href="img/favicon_dark.ico" id="faviconTag">
 
   <title>Туры</title>
 </head>
@@ -67,7 +67,7 @@
         <section class="tour-section">
           <!--Заголовок-->
           <div class="filter__open-button">
-            <img src="../static/img/filter-icon.svg" alt="" />
+            <img src="img/filter-icon.svg" alt="" />
             <span>Фильтры</span>
           </div>
           <aside class="filter-tour">
@@ -148,7 +148,7 @@
                   </div> -->
                 <swiper-container class="card-tour__image" navigation="true" pagination="true"
                   data-length="{{ images |length }}">
-                  <swiper-slide lazy="true"><img loading="lazy" src="../static/img/tours/tour_6_2.jpg" alt="Горы"
+                  <swiper-slide lazy="true"><img loading="lazy" src="img/tours/tour_6_2.jpg" alt="Горы"
                       class="card-tour__img" /></swiper-slide>
                 </swiper-container>
               </div>
@@ -182,7 +182,7 @@
                   </div> -->
                 <swiper-container class="card-tour__image" navigation="true" pagination="true"
                   data-length="{{ images |length }}">
-                  <swiper-slide lazy="true"><img loading="lazy" src="../static/img/tours/tour_1_1.jpg" alt="Горы"
+                  <swiper-slide lazy="true"><img loading="lazy" src="img/tours/tour_1_1.jpg" alt="Горы"
                       class="card-tour__img" /></swiper-slide>
                 </swiper-container>
               </div>
@@ -216,7 +216,7 @@
                   </div> -->
                 <swiper-container class="card-tour__image" navigation="true" pagination="true"
                   data-length="{{ images |length }}">
-                  <swiper-slide lazy="true"><img loading="lazy" src="../static/img/tours/tour_2_3.jpg" alt="Горы"
+                  <swiper-slide lazy="true"><img loading="lazy" src="img/tours/tour_2_3.jpg" alt="Горы"
                       class="card-tour__img" /></swiper-slide>
                 </swiper-container>
               </div>
@@ -244,7 +244,7 @@
                   </div> -->
                 <swiper-container class="card-tour__image" navigation="true" pagination="true"
                   data-length="{{ images |length }}">
-                  <swiper-slide lazy="true"><img loading="lazy" src="../static/img/tours/tour_3_1.jpg" alt="Горы"
+                  <swiper-slide lazy="true"><img loading="lazy" src="img/tours/tour_3_1.jpg" alt="Горы"
                       class="card-tour__img" /></swiper-slide>
                 </swiper-container>
               </div>
@@ -303,13 +303,13 @@
         <h3 class="footer__title">контакты</h3>
         <div class="footer__contacts">
           <div class="footer__contact__item">
-            <img src="../static/img/main-icon.svg" alt="" />
+            <img src="img/main-icon.svg" alt="" />
             <a href="mailto:example@mail.ru"
               style="text-decoration: none; color: black;"><span>example@mail.ru</span></a>
           </div>
 
           <div class="footer__contact__item">
-            <img src="../static/img/whatsapp-icon.svg" alt="" />
+            <img src="img/whatsapp-icon.svg" alt="" />
             <a href="https://api.whatsapp.com/send?phone="
               style="text-decoration: none; color: black;"><span>Whatsapp</span></a>
           </div>
@@ -321,9 +321,9 @@
   <div class="btn-up btn-up_hide"></div>
   <!-- </div> -->
 
-  <script src="../static/js/main.js"></script>
-  <script type="module" src="../static/js/base.js"></script>
-  <!-- <script type="module" src="../static/js/lazyLoading.js"></script> -->
+  <script src="js/main.js"></script>
+  <script type="module" src="js/base.js"></script>
+  <!-- <script type="module" src="js/lazyLoading.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
   <script>
     const faviconTag = document.getElementById("faviconTag");
@@ -338,9 +338,9 @@
 
     setInterval(changeFavicon, 1000)
   </script>
-  <script src="../static/js/tours.js"></script>
-  <script src="../static/js/animations.js"></script>
-  <script src="../static/js/filter.js"></script>
+  <script src="js/tours.js"></script>
+  <script src="js/animations.js"></script>
+  <script src="js/filter.js"></script>
 </body>
 
 </html>
