--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <section class="tours animated" id="tours">
       <h2 class="toursTitle">Туры</h2>
       <!-- Кнопка для перехода к турам -->
-      <a href="../templates/tour_page.html" class="toursShowAll">Показать все</a>
+      <a href="tour_page.html" class="toursShowAll">Показать все</a>
 
       <div class="toursListWrapper">
         <div class="tourItem">
