--- a/LegendSouth.html
+++ b/LegendSouth.html
@@ -19,6 +19,7 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="css/tour/tour-details.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <!-- FONTS -->
   <link rel="stylesheet" href="fonts/Ubuntu/Ubuntu-Light.ttf" />
   <link rel="stylesheet" href="css/base/base.css" />
@@ -145,8 +146,32 @@
   </footer>
   <!-- Кнопка для перехожа в начало страницы -->
   <div class="btn-up btn-up_hide"></div>
-  <!-- </div> -->
 
+<!-- MODAL WINDOWS -->
+<div class="modal fade" id="reserve" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Забронировать</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="mb-3 mx-3">
+          <label for="exampleFormControlInput1" class="form-label">Укажите email, чтобы наш менеджер связался с вами.</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- MODAL WINDOWS -->
+  
+
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script src="js/main.js"></script>
   <script type="module" src="js/base.js"></script>
   <!-- <script type="module" src="js/lazyLoading.js"></script> -->
