--- a/AncestorsTour.html
+++ b/AncestorsTour.html
@@ -72,8 +72,8 @@
           <div class="quick-desc__item">1-4 человек</div>
         </div>
         <div class="quick-desc__buttons">
-
-          <a href="" class="button-booking">Забронировать</a>
+          
+          <button class="button-booking" data-toggle="modal" data-target="#reserve">Забронировать</button>
 
           <!-- <a href="http://{{ tour_agency.website }}" class="button-booking">Забронировать</a> -->
 
